<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/hotel"
            android:icon="@drawable/outline_apartment_24"
            android:title="@string/hotels" />
        <item
            android:id="@+id/trip"
            android:icon="@drawable/baseline_directions_bus_filled_20"
            android:title="@string/trips" />
        <item
            android:id="@+id/fullTrip"
            android:icon="@drawable/outline_emoji_transportation_24"
            android:title="@string/full_trip_package" />
        <item
            android:id="@+id/Trans"
            android:icon="@drawable/baseline_airport_shuttle_24"
            android:title="@string/transportation" />
        <item
            android:id="@+id/order"
            android:icon="@drawable/outline_list_alt_24"
            android:title="@string/requests" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/editProfile"
            android:icon="@drawable/baseline_manage_accounts_24"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/changePassword"
            android:icon="@drawable/baseline_lock_24"
            android:title="@string/change_password" />
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/sign_out" />
    </group>
</menu>